--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@types/crypto-js": "^4.1.1",
+    "bootstrap": "^5.2.2",
     "crypto-js": "^4.1.1",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~7.5.0",
